--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <div id="app" class="container mt-5">
-
+        
     </div>
     <script type="module" src="script.js"></script>
-
+    <button id="clear-all" class="btn btn-danger mt-3">Удалить все дела</button>
 </body>
 </html>
-<!-- Из-за политики браузера подключение script.js возможно только через локальный сервер: http://localhost:8000/index.html -->
+<!-- Из-за политики безопасности браузера подключение script.js возможно только через локальный сервер: http://localhost:8000/index.html -->
